--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  overflow: hidden;
 }
 
 *, *:before, *:after {
@@ -20,4 +21,14 @@ ol, ul {
 img {
   max-width: 100%;
   height: auto;
+}
+
+#myCanvas {
+    height: 100vh;
+    width: 100%;
+    border: none;
+    }
+
+#slash {
+    color: aliceblue;
 }
