--- a/style.css
+++ b/style.css
@@ -23,15 +23,9 @@ img {
   height: auto;
 }
 
-#myCanvas {
+#canvas {
     height: 100vh;
     width: 100%;
     border: none;
+    background-image: url(bilder/cuttingboard.jpg);
     }
-
-#slash {
-    color: red;
-}
-
-canvas {
-}
