--- a/style.css
+++ b/style.css
@@ -4,17 +4,35 @@ html {
   overflow: hidden;
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: inherit;
 }
 
-body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+#cut {
+  background-image: url(bilder/cuttingboard.jpg);
+  background-size: cover;
+  background-position: center;
+}
+
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ol,
+ul {
   margin: 0;
   padding: 0;
   font-weight: normal;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
@@ -24,8 +42,14 @@ img {
 }
 
 #canvas {
-    height: 100vh;
-    width: 100%;
-    border: none;
-    background-image: url(bilder/cuttingboard.jpg);
-    }
+  height: 100vh;
+  width: 100%;
+  border: none;
+}
+
+#cutcolor{
+  stroke: grey;
+  stroke-width: 5;
+  transition: stroke 0.3s ease;
+  stroke-linecap: round;
+}
