--- a/style.css
+++ b/style.css
@@ -47,9 +47,12 @@ img {
   border: none;
 }
 
-#cutcolor{
-  stroke: orangered;
-  stroke-width: 50;
-  transition: stroke 0.3s ease;
-  stroke-linecap: round;
+.ball {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ff0000;
+  box-shadow: 0 0 10px black;
 }
+
