--- a/main.css
+++ b/main.css
@@ -23,16 +23,20 @@ body {
     font-size: 2rem;
     color: #333;
     margin-top: 20px;
-    padding: 20px;
+    padding: 5px;
 }
 .box {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 2fr);
+    grid-template-rows: repeat(3, 3fr);
     gap: 10px;
     width: 100%;
     height: 100%;
     position: relative;
+}
+#box2 {
+    grid-column: 2/4;
+    grid-row: 1/4;
 }
 .box div {
     background-color: #ccc;
