--- a/main.css
+++ b/main.css
@@ -34,10 +34,6 @@ body {
     height: 100%;
     position: relative;
 }
-#box2 {
-    grid-column: 2/4;
-    grid-row: 1/4;
-}
 .box div {
     background-color: #ccc;
     display: flex;
@@ -46,4 +42,19 @@ body {
     font-size: 2rem;
     color: #333;
     border-radius: 10px;
+}
+#box2 {
+    grid-column: 2/4;
+    grid-row: 1/4;
+}
+#funfact{
+    background-color: orange;
+    text-align: center;
+}
+#tilspill{
+    background-color: cyan;
+}
+a {
+    text-decoration: none;
+    color: #333;
 }
