--- a/main.css
+++ b/main.css
@@ -18,9 +18,10 @@ img {
     height: auto;
 }
 body {
-    height: 100vh;
+    height: 90vh;
     background-image: url(bilder/cuttingboard.jpg);
     background-size: cover;
+    min-width: 850px;
 }
 #title {
     text-align: center;
