--- a/main.css
+++ b/main.css
@@ -21,8 +21,8 @@ body {
     height: 90vh;
     background-image: url(bilder/cuttingboard.jpg);
     background-size: cover;
-    min-width: 850px;
-}
+}    
+
 #title {
     text-align: center;
     font-size: 2rem;
@@ -32,7 +32,7 @@ body {
 }
 .box {
     display: grid;
-    grid-template-columns: repeat(3, 2fr);
+    grid-template-columns: 1fr 2fr;
     grid-template-rows: repeat(3, 3fr);
     gap: 10px;
     width: 100%;
@@ -51,7 +51,7 @@ body {
     background-color: red;
 }
 #box2 {
-    grid-column: 2/4;
+    grid-column: 2/3;
     grid-row: 1/4;
     background-color: rgb(102, 195, 65);
 }
@@ -66,3 +66,11 @@ a {
     text-decoration: none;
     color: #333;
 }
+
+@media (width < 768px) {
+    .box {
+        display: flex;
+        flex-direction: column;
+    }
+}
+
