--- a/style.css
+++ b/style.css
@@ -64,3 +64,14 @@ img {
   color: white;
   font-size: 1.2rem;
 }
+
+.gameover{
+  display: none;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+  width: fit-content;
+  padding: 20px;
+  top: 50%;
+  left: 25%;
+  position: absolute;
+}
