--- a/style.css
+++ b/style.css
@@ -69,9 +69,13 @@ img {
   display: none;
   background-color: rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  width: fit-content;
   padding: 20px;
   top: 50%;
-  left: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   position: absolute;
+  z-index: 5;
+}
+#restart {
+  text-align: center;
 }
