--- a/main.css
+++ b/main.css
@@ -5,20 +5,16 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-family: "Fira Sans", sans-serif;
 }
 html {
     font-size: 16px;
-    overflow: hidden;
 }
 img {
     max-width: 100%;
     height: auto;
 }
 body {
-    height: 90vh;
+    min-height: 100vh;
     background-image: url(bilder/cuttingboard.jpg);
     background-size: cover;
 }    
@@ -27,18 +23,17 @@ body {
     text-align: center;
     font-size: 2rem;
     color: #333;
-    margin-top: 20px;
-    padding: 5px;
+    padding: 15px;
 }
 .box {
     display: grid;
     grid-template-columns: 1fr 2fr;
-    grid-template-rows: repeat(3, 3fr);
     gap: 10px;
     width: 100%;
-    height: 100%;
     position: relative;
-}
+    font-weight: bold;
+    text-transform: uppercase;
+    font-family: "Fira Sans", sans-serif;}
 .box div {
     display: flex;
     align-items: center;
@@ -54,6 +49,7 @@ body {
     grid-column: 2/3;
     grid-row: 1/4;
     background-color: rgb(102, 195, 65);
+    font-size: 60%;
 }
 #funfact{
     background-color: orange;
