--- a/style.css
+++ b/style.css
@@ -58,9 +58,8 @@ img {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5); 
   top: 10px;
-  left: 90%;
+  right: 10px;
   padding: 10px;
-  margin-right: 100px;
   color: white;
   font-size: 1.2rem;
 }
@@ -75,6 +74,7 @@ img {
   transform: translate(-50%, -50%);
   position: absolute;
   z-index: 5;
+  flex-direction: column;
 }
 #restart {
   text-align: center;
